# github-python36-also-has-38-available

./: pyproject.toml
.github/workflows/: test.yml
tests/: test_github_python36_also_has_38_available.py
