[tool.poetry]
name = "github-python36-also-has-38-available"
version = "0.1.0"
description = ""
authors = ["Thomas Borgen <thomasborgen91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
